cmake_minimum_required (VERSION 2.8)
project(Ray)

set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -Wextra -Werror")
site_name(BUILD_SITE_NAME)
set(UTCS_SITE_NAME "shadow.csres.utexas.edu")
message(STATUS "site_name = ${BUILD_SITE_NAME}")
if(BUILD_SITE_NAME STREQUAL UTCS_SITE_NAME)
  set(GLM_ROOT_DIR "/home/agrippa/sdks/glm_0.9.5.2")
  set(GraphicsMagick++_ROOT_DIR "/home/agrippa/sdks/Graphics-Magick_1.3.18")
  set(BOOST_ROOT "/home/agrippa/sdks/boost_1.54.0")
  set(ASSIMP_ROOT_DIR "/home/agrippa/sdks/assimp_3.0.1270")
elseif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
  set(GLM_ROOT_DIR "/opt/local/include/glm")
  set(GraphicsMagick++_ROOT_DIR "/opt/local/include/GraphicsMagick")
  set(BOOST_ROOT "/opt/local/include/boost/")
else()
  message("Building on UTCS departmental machine")
  set(GLM_ROOT_DIR "/u/agrippa/sdks/glm_0.9.5.2")
  set(GraphicsMagick++_ROOT_DIR "/u/agrippa/sdks/Graphics-Magick_1.3.18")
  set(BOOST_ROOT "/u/agrippa/sdks/boost_1.54.0")
  set(ASSIMP_ROOT_DIR "/u/agrippa/sdks/assimp_3.0")
endif()
enable_testing()

include_directories(${Ray_SOURCE_DIR}/include)

find_package(Boost 1.54 REQUIRED)
include_directories(${Boost_INCLUDE_DIR}) 

find_package(GLM REQUIRED)
include_directories(${GLM_INCLUDE_DIRS})
 
find_package(Assimp REQUIRED)
include_directories(${ASSIMP_INCLUDE_DIRS})
set(LIBS ${LIBS} ${ASSIMP_LIBRARIES})

find_package(GraphicsMagick++ REQUIRED)
include_directories(${GraphicsMagick++_INCLUDE_DIRS})
set(LIBS ${LIBS} ${GraphicsMagick++_LIBRARIES})

add_subdirectory(src)
add_subdirectory(tests)
 
